--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   firebase_auth: ^3.3.9
   firebase_core: ^1.13.1
   fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.13
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
