--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.3.9
-  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.15
+  firebase_core: ^1.15.0
   fluttertoast: ^8.0.9
-  cloud_firestore: ^3.1.10
+  cloud_firestore: ^3.1.13
+  date_picker_timeline: ^1.2.3
+  dropdown_search: ^2.0.1
+  sqflite: ^2.0.2
+  flutter_time_picker_spinner: ^2.0.0
+  adaptive_action_sheet: ^2.0.1
+  razorpay_flutter: ^1.3.0
+  dotted_border: ^2.0.0+2
+  image_picker: ^0.8.5
+  google_ml_vision: ^0.0.7
 
 dev_dependencies:
   flutter_test:
@@ -46,10 +55,11 @@ dev_dependencies:
   google_fonts: ^2.2.0
   flutter_slidable: ^1.2.0
   pin_code_fields: ^7.3.0
-  firebase_auth: ^3.3.9
-  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.15
+  firebase_core: ^1.15.0
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.13
+  google_ml_vision: ^0.0.7
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
